--- a/views/files/user/user.html
+++ b/views/files/user/user.html
@@ -1,21 +1,43 @@
 {{define "head"}}
-
-	<link rel="stylesheet" href="css/style.css">
+	<script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
+	
+	<script>
+		tinymce.init({ selector: "textarea", menubar:false, height : "480", width: "99.8%", plugins: ['advlist autolink lists link image charmap print preview anchor','searchreplace visualblocks code fullscreen','insertdatetime media table contextmenu paste code'], toolbar: 'undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image',});
+	</script>
 
 	<style>
-		p { color: #fff; text-align:center;}
-		h1 { color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:2px; text-align:center;margin: 20%; font-size: 55px;}
+		.textEdit{
+   			margin-left: 100px;
+			margin-right: 100px;
+		}
+		.titulo{
+			width: 600px;
+			height: 40px;
+		}
+		.btn-send{
+			margin-bottom: 10px;
+			margin-top: -50px;
+			margin-left: 650px;
+			width: 500px;
+			height: 40px;
+		}
+		#tags{
+			margin-bottom: 15px;
+			width: 1150px;
+		}
 	</style>
-
+	
+	<script type="text/javascript">{{template "js"}}</script>
 
 {{end}}
 
 {{define "body"}}
 
-	<div id="greeting-div"></div>
-	<h1>Hello, word!</h1>
-	
-	<script src="https://unpkg.com/react@15/dist/react.min.js"></script>
-	<script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
-	<script>{{template "js"}}</script>
+	<form class="textEdit" onsubmit="return sendPost()" id="new">
+		<input type="text" class="titulo form-control" placeholder="Titulo" required="required" id="titulo">
+		<button type="submit" class="btn-send btn btn-primary">enviar</button>
+		<input type="text" class="form-control" placeholder="Tags" id="tags">
+		<textarea id="text"></textarea>
+	</form>
+
 {{end}}
