--- a/views/files-min/user/user.html
+++ b/views/files-min/user/user.html
@@ -1,1 +1,1 @@
-{{define "head"}}<script type="text/javascript">{{template "js"}}</script>{{end}} {{define "body"}}<div id="posts"></div>{{end}}
+{{define "head"}}<script type="text/javascript">{{template "ws"}}{{template "js"}}</script>{{end}} {{define "body"}}<div id="posts"></div>{{end}}
