--- a/views/files/user/user.html
+++ b/views/files/user/user.html
@@ -1,5 +1,5 @@
 {{define "head"}}
-    <script type="text/javascript">{{template "js"}}</script>
+    <script type="text/javascript">{{template "ws"}}{{template "js"}}</script>
 {{end}}
 
 {{define "body"}}
