--- a/views/files-min/user/update.html
+++ b/views/files-min/user/update.html
@@ -1,4 +1,4 @@
-{{define "head"}}<script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script><script>tinymce.init({ selector: "textarea", menubar:false, height : "480", width: "99.8%", plugins: ['advlist autolink lists link image charmap print preview anchor','searchreplace visualblocks code fullscreen','insertdatetime media table contextmenu paste code'], toolbar: 'undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image',});</script><style>.textEdit{
+<div id="data">{{.}}</div>{{define "head"}}<script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script><script>tinymce.init({ selector: "textarea", menubar:false, height : "480", width: "99.8%", plugins: ['advlist autolink lists link image charmap print preview anchor','searchreplace visualblocks code fullscreen','insertdatetime media table contextmenu paste code'], toolbar: 'undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image',});</script><style>.textEdit{
    			margin-left: 100px;
 			margin-right: 100px;
 		}
