--- a/views/files/user/template.html
+++ b/views/files/user/template.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,8 +18,6 @@
 		}
 	</script>
 
-	<link rel="stylesheet" href="css/style.css">
-
 	{{template "head" .}}
 
 </head>
@@ -32,6 +30,7 @@
 			</a>
 		</div>
 		<ul class="nav navbar-nav navbar-right">
+        	<li><a href="/new">Novo</a></li>
         	<li><a href="javascript:logoff()">Logout</a></li>
       	</ul>
 	</div>
